crates/picante/tests/ui/input_missing_key.rs
#[picante::input]
pub struct Text {
    pub key: String,
    pub value: String,
}

fn main() {}
